compiler/testData/diagnostics/tests/regressions/kt13685.kt
// !WITH_NEW_INFERENCE
// !DIAGNOSTICS: -UNREACHABLE_CODE

fun foo() {
    val <!UNUSED_VARIABLE{OI}!>text<!>: List<Any> = null!!
    text.<!UNRESOLVED_REFERENCE!>map<!> <!DEBUG_INFO_MISSING_UNRESOLVED{NI}, DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE{OI}!>Any<!><!SYNTAX!>?<!>::<!DEBUG_INFO_MISSING_UNRESOLVED!>toString<!>
}
